added one more instance

--- a/CloudfrontWithEc2.yaml
+++ b/CloudfrontWithEc2.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: Creates a CloudFront distribution with an Application Load Balancer and EC2 instance as the origin, including VPC, subnet, and security group
+Description: Creates a CloudFront distribution with an Application Load Balancer and EC2 instances as the origin, including VPC, subnet, and security group
 
 Resources:
   MyVPC:
@@ -130,6 +130,26 @@ Resources:
         - Key: Name
           Value: cloudfront-ec2-instance
 
+  MyEC2Instance2:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId: ami-05ffe3c48a9991133
+      InstanceType: t2.micro
+      SecurityGroupIds:
+        - !Ref WebSecurityGroup
+      SubnetId: !Ref MyPublicSubnet2
+      UserData:
+        Fn::Base64: |
+          #!/bin/bash
+          yum update -y
+          yum install -y httpd
+          systemctl start httpd
+          systemctl enable httpd
+          echo "<h1>Hello from EC2 via CloudFront!</h1>" > /var/www/html/index.html
+      Tags:
+        - Key: Name
+          Value: cloudfront-ec2-instance-2
+
   ApplicationLoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
@@ -163,6 +183,7 @@ Resources:
       TargetType: instance
       Targets:
         - Id: !Ref MyEC2Instance
+        - Id: !Ref MyEC2Instance2
       HealthCheckProtocol: HTTP
       HealthCheckPath: /index.html
       Tags:
@@ -197,11 +218,17 @@ Outputs:
     Description: Domain name of the CloudFront distribution
     Value: !GetAtt CloudFrontDistribution.DomainName
   EC2InstanceId:
-    Description: ID of the EC2 instance
+    Description: ID of the first EC2 instance
     Value: !Ref MyEC2Instance
+  EC2InstanceId2:
+    Description: ID of the second EC2 instance
+    Value: !Ref MyEC2Instance2
   EC2PublicIp:
-    Description: Public IP of the EC2 instance
+    Description: Public IP of the first EC2 instance
     Value: !GetAtt MyEC2Instance.PublicIp
+  EC2PublicIp2:
+    Description: Public IP of the second EC2 instance
+    Value: !GetAtt MyEC2Instance2.PublicIp
   VpcId:
     Description: ID of the created VPC
     Value: !Ref MyVPC
@@ -216,7 +243,3 @@ Outputs:
     Value: !Ref WebSecurityGroup
   ALBSecurityGroupId:
     Description: ID of the ALB security group
-    Value: !Ref ALBSecurityGroup
-  ALBDNSName:
-    Description: DNS name of the Application Load Balancer
-    Value: !GetAtt ApplicationLoadBalancer.DNSName
