--- a/CloudfrontWithEc2.yaml
+++ b/CloudfrontWithEc2.yaml
@@ -145,7 +145,7 @@ Resources:
           yum install -y httpd
           systemctl start httpd
           systemctl enable httpd
-          echo "<h1>Hello from EC2 via CloudFront!</h1>" > /var/www/html/index.html
+          echo "<h1>Get ready! This is the first web test for a stylish fashion and design website</h1>" > /var/www/html/index.html
       Tags:
         - Key: Name
           Value: cloudfront-ec2-instance-2
@@ -170,6 +170,18 @@ Resources:
       LoadBalancerArn: !Ref ApplicationLoadBalancer
       Port: 80
       Protocol: HTTP
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref ALBTargetGroup
+
+  ALBHTTPSListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      LoadBalancerArn: !Ref ApplicationLoadBalancer
+      Port: 443
+      Protocol: HTTPS
+      Certificates:
+        - CertificateArn: arn:aws:acm:us-east-1:731386536439:certificate/bbe51779-3173-46db-b4b4-9e348734b6aa
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref ALBTargetGroup
@@ -217,43 +229,33 @@ Outputs:
   CloudFrontDomainName:
     Description: Domain name of the CloudFront distribution
     Value: !GetAtt CloudFrontDistribution.DomainName
-
   EC2InstanceId:
     Description: ID of the first EC2 instance
     Value: !Ref MyEC2Instance
-
   EC2InstanceId2:
     Description: ID of the second EC2 instance
     Value: !Ref MyEC2Instance2
-
   EC2PublicIp:
     Description: Public IP of the first EC2 instance
     Value: !GetAtt MyEC2Instance.PublicIp
-
   EC2PublicIp2:
     Description: Public IP of the second EC2 instance
     Value: !GetAtt MyEC2Instance2.PublicIp
-
   VpcId:
     Description: ID of the created VPC
     Value: !Ref MyVPC
-
   SubnetId:
     Description: ID of the first public subnet
     Value: !Ref MyPublicSubnet
-
   SubnetId2:
     Description: ID of the second public subnet
     Value: !Ref MyPublicSubnet2
-
   SecurityGroupId:
     Description: ID of the EC2 security group
     Value: !Ref WebSecurityGroup
-
   ALBSecurityGroupId:
     Description: ID of the ALB security group
     Value: !Ref ALBSecurityGroup
-
   ALBDNSName:
     Description: DNS name of the Application Load Balancer
     Value: !GetAtt ApplicationLoadBalancer.DNSName
